# epsic

./: .gitignore  .readthedocs.yaml  Makefile.am  README.md  configure.ac  developer  epsic.pc.in  index.html  params.json  requirements.in  requirements.txt
docs/: .gitignore  Makefile  common.dox  conf.py  epsic.dox  html.dox  index.rst  intro.md  latex_macros.tex  requirements.txt  util.dox  xml.dox
docs/overrides/: api_epsic_classlist  api_util_classlist  api_util_structlist
intro/: dsb.eps  intro.tex  local.bib  make_plots.csh  mixing.C  usb.eps
manual/: epsic.tex  manual.tex
notebooks/: README.md  enironment.yml  environment.yml  interactive_polarization_ellipse.ipynb  secret.yaml
plots/: Makefile  README.md  polarization_cases.py  polarization_ellipse.py  polarization_sphere.py  polarization_sphere_circular.py  polarization_spherical.py
scripts/: .gitignore
scripts/bivariate_lognormal/: plot.gnu
scripts/healpix_tests/: basis.sh  coherent.sh  coherent_obliquity_QU.sh  coherent_obliquity_VQ.sh
scripts/obliquity/: coherent_obliquity_VQ.sh  plot.gnu
scripts/var_var_instI/: collate.csh  reduce.csh  run.csh  single.csh
scripts/var_var_meanI/: collate.csh  plots.gnu  reduce.csh  run.csh  single.csh
scripts/var_var_moduI/: README  collate.csh  plots.gnu  reduce.csh  run.csh  single.csh
src/: .gitignore  BoxMuller.h  Conventions.h  Dirac.h  Jacobi.h  Jones.h  Makefile  Makefile.am  Matrix.h  Minkowski.h  Pauli.h  Quaternion.h  Stokes.h  Traits.h  Vector.h  coherent.cpp  complex_promote.h  composite.cpp  configure.ac  covariant.cpp  covariant.h  disjoint.cpp  epsic.C  epsic.cpp  mode.cpp  mode.h  modulated.h  random.C  random.h  sample.cpp  sample.h  simopm.C  smoothed.h  square_modulated_mode.cpp  superposed.cpp  tostring.h
src/config/: Makefile.local  best_partial_specialization.m4  complex_templates.m4  cuda.m4  cudalt.py  default_partial_specialization.m4  healpix.m4
src/true_math/: Makefile.am  test_true_math.C  true_math.c  true_math.h
src/util/: .gitignore  Basis.h  BoxMuller.C  BoxMuller.h  Cloude.h  Convention.C  Convention.h  Conventions.C  Conventions.h  Dirac.C  Dirac.h  Estimate.h  Jacobi.h  Jones.h  Makefile.am  Matrix.h  MatrixTest.h  Minkowski.h  Pauli.C  Pauli.h  PolarizedNoise.h  PromoteTraits.h  Quaternion.h  Quaternion.tex  Spinor.h  Stokes.h  Traits.h  Vector.h  complex_math.h  complex_promote.h  cuSpinor.h  generate_PromoteTraits.C  header_PromoteTraits  myfinite.c  myfinite.h  random.h  test_Basis.C  test_BoxMuller.C  test_Convention.C  test_Dirac.C  (+19 more)
src/util/epsic/: complex.h
